--- a/W3/Python_TutorialW3.ipynb
+++ b/W3/Python_TutorialW3.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,20 +14,37 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "Question 1"
-      ],
+        "\n",
+        "------------Tutorial 03-------------------\n",
+        "\n",
+        "#Part 1-Google Colab and Python\n",
+        "1. Create a new notebook and code the following\n",
+        "\n",
+        "1. Create a numpy array of size 2 x 2\n",
+        "2. Create a random numpy array of size 3 x 4\n",
+        "3. Create a numpy array of ones and a numpy array of zeroes\n",
+        "4. Create a random numpy array of size 6x3 and transpose it \n",
+        "5. Create two random numpy array of size n x p and p x m and then compute the dot product\n",
+        "\n",
+        "\n",
+        "#Part 2-Colab and github\n",
+        "1. From Google Colab, push the notebook onto your GitHub"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "t8_rR7-vlLpN"
-      }
+      },
+      "source": [
+        "Question 1"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "arr = np.array([[1, 2], [3, 4]])\n",
-        "\n",
-        "print(arr)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,34 +52,34 @@
         "id": "gYMW74W8lOo6",
         "outputId": "74d4814d-ebc4-444e-c740-6352a57b7965"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[1 2]\n",
             " [3 4]]\n"
           ]
         }
+      ],
+      "source": [
+        "arr = np.array([[1, 2], [3, 4]])\n",
+        "\n",
+        "print(arr)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Question 2"
-      ],
       "metadata": {
         "id": "-ShFJbfjmDwS"
-      }
+      },
+      "source": [
+        "Question 2"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "random_array = np.random.rand(3,4)\n",
-        "\n",
-        "print(random_array)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,39 +87,35 @@
         "id": "8GU7lZVomFsv",
         "outputId": "22a0f334-77e4-4a9f-a94d-ccace06983e2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[0.94635633 0.36877552 0.71694943 0.45106446]\n",
             " [0.83343299 0.57249461 0.00502076 0.89628038]\n",
             " [0.32834535 0.49501949 0.47696735 0.14447611]]\n"
           ]
         }
+      ],
+      "source": [
+        "random_array = np.random.rand(3,4)\n",
+        "\n",
+        "print(random_array)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Question 3\n"
-      ],
       "metadata": {
         "id": "b9i29uxZnTnc"
-      }
+      },
+      "source": [
+        "Question 3\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "array_of_ones = np.ones((3, 3))\n",
-        "print(\"The array of ones is: \")\n",
-        "print(array_of_ones)\n",
-        "\n",
-        "array_of_zeroes = np.zeros((3, 3))\n",
-        "print(\"The array of zeroes is: \")\n",
-        "print(array_of_zeroes)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,11 +123,10 @@
         "id": "LsC0AiOMphfN",
         "outputId": "38973503-0cdf-470f-cf64-2721958294f5"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The array of ones is: \n",
             "[[1. 1. 1.]\n",
@@ -140,26 +138,29 @@
             " [0. 0. 0.]]\n"
           ]
         }
+      ],
+      "source": [
+        "array_of_ones = np.ones((3, 3))\n",
+        "print(\"The array of ones is: \")\n",
+        "print(array_of_ones)\n",
+        "\n",
+        "array_of_zeroes = np.zeros((3, 3))\n",
+        "print(\"The array of zeroes is: \")\n",
+        "print(array_of_zeroes)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Question 4"
-      ],
       "metadata": {
         "id": "Pc_7vfnGqyr6"
-      }
+      },
+      "source": [
+        "Question 4"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "random_array_big = np.random.randint(low = 0, high = 100, size = (6, 3))\n",
-        "print(\"Original array is: \\n\", random_array_big)\n",
-        "\n",
-        "arr_tranposed = random_array_big.T  # .T means tranpose, commonly used in 2D array\n",
-        "print(\"\\nTranposed array is: \\n\", arr_tranposed)\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -167,11 +168,10 @@
         "id": "fbSda5VIqRqQ",
         "outputId": "a246ea02-0da3-4f57-cfb0-8443f9ac788d"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Original array is: \n",
             " [[62 63 20]\n",
@@ -187,37 +187,27 @@
             " [20 71 72 34 38 97]]\n"
           ]
         }
+      ],
+      "source": [
+        "random_array_big = np.random.randint(low = 0, high = 100, size = (6, 3))\n",
+        "print(\"Original array is: \\n\", random_array_big)\n",
+        "\n",
+        "arr_tranposed = random_array_big.T  # .T means tranpose, commonly used in 2D array\n",
+        "print(\"\\nTranposed array is: \\n\", arr_tranposed)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Question 5"
-      ],
       "metadata": {
         "id": "ZChKKGoiq3ob"
-      }
+      },
+      "source": [
+        "Question 5"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Create two random numpy array of size n x p and p x m and then compute the dot product\")\n",
-        "n = int(input(\"Enter the n: \"))\n",
-        "p = int(input(\"Enter the p: \"))\n",
-        "m = int(input(\"Enter the m: \"))\n",
-        "print(\" \")\n",
-        "\n",
-        "array1 = np.random.randint(low = 0 , high = 100, size = (n, p))\n",
-        "print(\"array1 is: \\n\", array1)\n",
-        "print(\"\\n\")\n",
-        "\n",
-        "array2 = np.random.randint(low = 0 , high = 100, size = (p, m))\n",
-        "print(\"array2 is: \\n\", array2)\n",
-        "print(\"\\n\")\n",
-        "\n",
-        "dot_product = np.dot(array1, array2)\n",
-        "print(\"The dot product is: \\n\", dot_product)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,11 +215,10 @@
         "id": "0s1IFM_Cu0BJ",
         "outputId": "bb42aa6b-ff40-4912-d52c-2b56a3c04dab"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Create two random numpy array of size n x p and p x m and then compute the dot product\n",
             "Enter the n: 2\n",
@@ -252,7 +241,39 @@
             " [2268 5077]]\n"
           ]
         }
+      ],
+      "source": [
+        "print(\"Create two random numpy array of size n x p and p x m and then compute the dot product\")\n",
+        "n = int(input(\"Enter the n: \"))\n",
+        "p = int(input(\"Enter the p: \"))\n",
+        "m = int(input(\"Enter the m: \"))\n",
+        "print(\" \")\n",
+        "\n",
+        "array1 = np.random.randint(low = 0 , high = 100, size = (n, p))\n",
+        "print(\"array1 is: \\n\", array1)\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "array2 = np.random.randint(low = 0 , high = 100, size = (p, m))\n",
+        "print(\"array2 is: \\n\", array2)\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "dot_product = np.dot(array1, array2)\n",
+        "print(\"The dot product is: \\n\", dot_product)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
